Update navigation to use hash routing to fix GitHub Pages refresh issue

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                       <a
                         class="framer-7s2Gn framer-T31Po framer-1cgcgxk framer-v-1cgcgxk framer-1c8f2vq"
                         data-framer-name="Variant 1"
-                        href="./"
+                        href="#"
                         data-framer-page-link-current="true"
                         ><div
                           class="framer-14yhno4"
@@ -252,7 +252,7 @@
                             data-framer-name="Default"
                             data-highlight="true"
                             style="background-color:var(--token-1a2317bc-6dae-46d7-a758-b64f23db2db8, rgb(235, 235, 235));border-bottom-left-radius:100px;border-bottom-right-radius:100px;border-top-left-radius:100px;border-top-right-radius:100px"
-                            href="./about"
+                            href="#about"
                             tabindex="0"
                             ><div
                               class="framer-uipjbf"
@@ -276,7 +276,7 @@
                             data-framer-name="Default"
                             data-highlight="true"
                             style="background-color:var(--token-1a2317bc-6dae-46d7-a758-b64f23db2db8, rgb(235, 235, 235));border-bottom-left-radius:100px;border-bottom-right-radius:100px;border-top-left-radius:100px;border-top-right-radius:100px"
-                            href="./writing"
+                            href="#writing"
                             tabindex="0"
                             ><div
                               class="framer-uipjbf"
@@ -300,7 +300,7 @@
                             data-framer-name="Default"
                             data-highlight="true"
                             style="background-color:var(--token-1a2317bc-6dae-46d7-a758-b64f23db2db8, rgb(235, 235, 235));border-bottom-left-radius:100px;border-bottom-right-radius:100px;border-top-left-radius:100px;border-top-right-radius:100px"
-                            href="./contact"
+                            href="#contact"
                             tabindex="0"
                             ><div
                               class="framer-uipjbf"
@@ -344,7 +344,7 @@
                       <a
                         class="framer-7s2Gn framer-T31Po framer-1cgcgxk framer-v-1cgcgxk framer-1c8f2vq"
                         data-framer-name="Variant 1"
-                        href="./"
+                        href="#"
                         data-framer-page-link-current="true"
                         ><div
                           class="framer-14yhno4"
@@ -416,7 +416,7 @@
                                   data-framer-name="Default"
                                   data-highlight="true"
                                   style="background-color:var(--token-1a2317bc-6dae-46d7-a758-b64f23db2db8, rgb(235, 235, 235));border-bottom-left-radius:100px;border-bottom-right-radius:100px;border-top-left-radius:100px;border-top-right-radius:100px"
-                                  href="./about"
+                                  href="#about"
                                   tabindex="0"
                                   ><div
                                     class="framer-uipjbf"
@@ -440,7 +440,7 @@
                                   data-framer-name="Default"
                                   data-highlight="true"
                                   style="background-color:var(--token-1a2317bc-6dae-46d7-a758-b64f23db2db8, rgb(235, 235, 235));border-bottom-left-radius:100px;border-bottom-right-radius:100px;border-top-left-radius:100px;border-top-right-radius:100px"
-                                  href="./writing"
+                                  href="#writing"
                                   tabindex="0"
                                   ><div
                                     class="framer-uipjbf"
@@ -464,7 +464,7 @@
                                   data-framer-name="Default"
                                   data-highlight="true"
                                   style="background-color:var(--token-1a2317bc-6dae-46d7-a758-b64f23db2db8, rgb(235, 235, 235));border-bottom-left-radius:100px;border-bottom-right-radius:100px;border-top-left-radius:100px;border-top-right-radius:100px"
-                                  href="./contact"
+                                  href="#contact"
                                   tabindex="0"
                                   ><div
                                     class="framer-uipjbf"
@@ -511,7 +511,7 @@
                       <a
                         class="framer-7s2Gn framer-T31Po framer-1cgcgxk framer-v-1cgcgxk framer-1c8f2vq"
                         data-framer-name="Variant 1"
-                        href="./"
+                        href="#"
                         data-framer-page-link-current="true"
                         ><div
                           class="framer-14yhno4"
@@ -543,7 +543,7 @@
                             data-framer-name="Default"
                             data-highlight="true"
                             style="background-color:var(--token-1a2317bc-6dae-46d7-a758-b64f23db2db8, rgb(235, 235, 235));border-bottom-left-radius:100px;border-bottom-right-radius:100px;border-top-left-radius:100px;border-top-right-radius:100px"
-                            href="./about"
+                            href="#about"
                             tabindex="0"
                             ><div
                               class="framer-uipjbf"
@@ -567,7 +567,7 @@
                             data-framer-name="Default"
                             data-highlight="true"
                             style="background-color:var(--token-1a2317bc-6dae-46d7-a758-b64f23db2db8, rgb(235, 235, 235));border-bottom-left-radius:100px;border-bottom-right-radius:100px;border-top-left-radius:100px;border-top-right-radius:100px"
-                            href="./writing"
+                            href="#writing"
                             tabindex="0"
                             ><div
                               class="framer-uipjbf"
@@ -591,7 +591,7 @@
                             data-framer-name="Default"
                             data-highlight="true"
                             style="background-color:var(--token-1a2317bc-6dae-46d7-a758-b64f23db2db8, rgb(235, 235, 235));border-bottom-left-radius:100px;border-bottom-right-radius:100px;border-top-left-radius:100px;border-top-right-radius:100px"
-                            href="./contact"
+                            href="#contact"
                             tabindex="0"
                             ><div
                               class="framer-uipjbf"
@@ -662,7 +662,7 @@
                   <a
                     class="framer-h9Tjw framer-Me3BG framer-jx44g9 framer-v-jx44g9 framer-4ijf7m"
                     data-framer-name="Variant 1"
-                    href="./about"
+                    href="#about"
                     tabindex="0"
                     ><div class="framer-2e8dtx">
                       <div class="framer-1vkj8dl">
@@ -1047,7 +1047,7 @@
             <a
               class="framer-ccqbte framer-lux5qc"
               data-framer-name="Wrapper"
-              href="./writing/top-bookkeeping-questions-answered-your-ultimate-faq-guide"
+              href="#writing/top-bookkeeping-questions-answered-your-ultimate-faq-guide"
               ><div class="ssr-variant hidden-7ol1az hidden-1f90353">
                 <div class="framer-157lu8d-container">
                   <div
@@ -1300,7 +1300,7 @@
             ><a
               class="framer-ccqbte framer-lux5qc"
               data-framer-name="Wrapper"
-              href="./writing/why-small-business-owners-love-working-with-kleverbooks-for-their-bookkeeping-needs"
+              href="#writing/why-small-business-owners-love-working-with-kleverbooks-for-their-bookkeeping-needs"
               ><div class="ssr-variant hidden-7ol1az hidden-1f90353">
                 <div class="framer-157lu8d-container">
                   <div
@@ -1553,7 +1553,7 @@
             ><a
               class="framer-ccqbte framer-lux5qc"
               data-framer-name="Wrapper"
-              href="./writing/when-to-hire-professional-bookkeeper-small-business"
+              href="#writing/when-to-hire-professional-bookkeeper-small-business"
               ><div class="ssr-variant hidden-7ol1az hidden-1f90353">
                 <div class="framer-157lu8d-container">
                   <div
@@ -1812,7 +1812,7 @@
             ><a
               class="framer-ccqbte framer-lux5qc"
               data-framer-name="Wrapper"
-              href="./writing/costly-bookkeeping-mistakes-small-businesses-make"
+              href="#writing/costly-bookkeeping-mistakes-small-businesses-make"
               ><div class="ssr-variant hidden-7ol1az hidden-1f90353">
                 <div class="framer-157lu8d-container">
                   <div
@@ -2065,7 +2065,7 @@
             ><a
               class="framer-ccqbte framer-lux5qc"
               data-framer-name="Wrapper"
-              href="./writing/outsourced-bookkeeping-save-time-money"
+              href="#writing/outsourced-bookkeeping-save-time-money"
               ><div class="ssr-variant hidden-7ol1az hidden-1f90353">
                 <div class="framer-157lu8d-container">
                   <div
@@ -2318,7 +2318,7 @@
             ><a
               class="framer-ccqbte framer-lux5qc"
               data-framer-name="Wrapper"
-              href="./writing/evolution-of-design-thinking"
+              href="#writing/evolution-of-design-thinking"
               ><div class="ssr-variant hidden-7ol1az hidden-1f90353">
                 <div class="framer-157lu8d-container">
                   <div
@@ -2645,7 +2645,7 @@
                         class="framer-h9Tjw framer-Me3BG framer-jx44g9 framer-v-jx44g9 framer-4ijf7m"
                         data-framer-name="Variant 1"
                         style="height:100%"
-                        href="./contact"
+                        href="#contact"
                         tabindex="0"
                         ><div class="framer-2e8dtx">
                           <div class="framer-1vkj8dl">
@@ -2782,7 +2782,7 @@
                         class="framer-h9Tjw framer-Me3BG framer-jx44g9 framer-v-jx44g9 framer-4ijf7m"
                         data-framer-name="Variant 1"
                         style="height:100%"
-                        href="./contact"
+                        href="#contact"
                         tabindex="0"
                         ><div class="framer-2e8dtx">
                           <div class="framer-1vkj8dl">
@@ -2919,7 +2919,7 @@
                         class="framer-h9Tjw framer-Me3BG framer-jx44g9 framer-v-jx44g9 framer-4ijf7m"
                         data-framer-name="Variant 1"
                         style="height:100%"
-                        href="./contact"
+                        href="#contact"
                         tabindex="0"
                         ><div class="framer-2e8dtx">
                           <div class="framer-1vkj8dl">
@@ -3006,7 +3006,7 @@
                   <a
                     class="framer-7s2Gn framer-T31Po framer-1cgcgxk framer-v-1cgcgxk framer-1c8f2vq"
                     data-framer-name="Variant 1"
-                    href="./"
+                    href="#"
                     data-framer-page-link-current="true"
                     ><div
                       class="framer-14yhno4"
@@ -3029,7 +3029,7 @@
                       <a
                         class="framer-7s2Gn framer-T31Po framer-1cgcgxk framer-v-1cgcgxk framer-1c8f2vq"
                         data-framer-name="Variant 1"
-                        href="./about"
+                        href="#about"
                         ><div
                           class="framer-14yhno4"
                           style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;--extracted-r6o4lv:var(--token-0a481ec1-86f0-4e6d-86e6-79d7bce4ec1d, rgb(0, 0, 0));transform:none"
@@ -3049,7 +3049,7 @@
                       <a
                         class="framer-7s2Gn framer-T31Po framer-1cgcgxk framer-v-1cgcgxk framer-1c8f2vq"
                         data-framer-name="Variant 1"
-                        href="./writing"
+                        href="#writing"
                         ><div
                           class="framer-14yhno4"
                           style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;--extracted-r6o4lv:var(--token-0a481ec1-86f0-4e6d-86e6-79d7bce4ec1d, rgb(0, 0, 0));transform:none"
@@ -3069,7 +3069,7 @@
                       <a
                         class="framer-7s2Gn framer-T31Po framer-1cgcgxk framer-v-1cgcgxk framer-1c8f2vq"
                         data-framer-name="Variant 1"
-                        href="./contact"
+                        href="#contact"
                         ><div
                           class="framer-14yhno4"
                           style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;--extracted-r6o4lv:var(--token-0a481ec1-86f0-4e6d-86e6-79d7bce4ec1d, rgb(0, 0, 0));transform:none"
@@ -3103,7 +3103,7 @@
                   <a
                     class="framer-7s2Gn framer-T31Po framer-1cgcgxk framer-v-1cgcgxk framer-1c8f2vq"
                     data-framer-name="Variant 1"
-                    href="./"
+                    href="#"
                     data-framer-page-link-current="true"
                     ><div
                       class="framer-14yhno4"
@@ -3126,7 +3126,7 @@
                       <a
                         class="framer-7s2Gn framer-T31Po framer-1cgcgxk framer-v-1cgcgxk framer-1c8f2vq"
                         data-framer-name="Variant 1"
-                        href="./about"
+                        href="#about"
                         ><div
                           class="framer-14yhno4"
                           style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;--extracted-r6o4lv:var(--token-0a481ec1-86f0-4e6d-86e6-79d7bce4ec1d, rgb(0, 0, 0));transform:none"
@@ -3146,7 +3146,7 @@
                       <a
                         class="framer-7s2Gn framer-T31Po framer-1cgcgxk framer-v-1cgcgxk framer-1c8f2vq"
                         data-framer-name="Variant 1"
-                        href="./writing"
+                        href="#writing"
                         ><div
                           class="framer-14yhno4"
                           style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;--extracted-r6o4lv:var(--token-0a481ec1-86f0-4e6d-86e6-79d7bce4ec1d, rgb(0, 0, 0));transform:none"
@@ -3166,7 +3166,7 @@
                       <a
                         class="framer-7s2Gn framer-T31Po framer-1cgcgxk framer-v-1cgcgxk framer-1c8f2vq"
                         data-framer-name="Variant 1"
-                        href="./contact"
+                        href="#contact"
                         ><div
                           class="framer-14yhno4"
                           style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;--extracted-r6o4lv:var(--token-0a481ec1-86f0-4e6d-86e6-79d7bce4ec1d, rgb(0, 0, 0));transform:none"
@@ -3200,7 +3200,7 @@
                   <a
                     class="framer-7s2Gn framer-T31Po framer-1cgcgxk framer-v-1cgcgxk framer-1c8f2vq"
                     data-framer-name="Variant 1"
-                    href="./"
+                    href="#"
                     data-framer-page-link-current="true"
                     ><div
                       class="framer-14yhno4"
@@ -3223,7 +3223,7 @@
                       <a
                         class="framer-7s2Gn framer-T31Po framer-1cgcgxk framer-v-1cgcgxk framer-1c8f2vq"
                         data-framer-name="Variant 1"
-                        href="./about"
+                        href="#about"
                         ><div
                           class="framer-14yhno4"
                           style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;--extracted-r6o4lv:var(--token-0a481ec1-86f0-4e6d-86e6-79d7bce4ec1d, rgb(0, 0, 0));transform:none"
@@ -3243,7 +3243,7 @@
                       <a
                         class="framer-7s2Gn framer-T31Po framer-1cgcgxk framer-v-1cgcgxk framer-1c8f2vq"
                         data-framer-name="Variant 1"
-                        href="./writing"
+                        href="#writing"
                         ><div
                           class="framer-14yhno4"
                           style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;--extracted-r6o4lv:var(--token-0a481ec1-86f0-4e6d-86e6-79d7bce4ec1d, rgb(0, 0, 0));transform:none"
@@ -3263,7 +3263,7 @@
                       <a
                         class="framer-7s2Gn framer-T31Po framer-1cgcgxk framer-v-1cgcgxk framer-1c8f2vq"
                         data-framer-name="Variant 1"
-                        href="./contact"
+                        href="#contact"
                         ><div
                           class="framer-14yhno4"
                           style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;--extracted-r6o4lv:var(--token-0a481ec1-86f0-4e6d-86e6-79d7bce4ec1d, rgb(0, 0, 0));transform:none"
